--- a/LAB_FeedbackProcessor/LAB_FeedbackProcessor.csproj
+++ b/LAB_FeedbackProcessor/LAB_FeedbackProcessor.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FeedBackProcess_Logic\FeedBackProcess_Logic.csproj" />
+  </ItemGroup>
+
 </Project>
